# cookiecutter-project

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: codechecks.yaml  tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
src/mnist_classifier/: __init__.py  data.py  evaluate.py  model.py  train.py  visualize.py
tests/: __init__.py  test_data.py  test_model.py  test_train.py
wandb/run-20250109_124405-n59zhpxv/files/: requirements.txt
