[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist_classifier"
version = "0.0.1"
description = "mnist classifier project using cookiecutter"
authors = [
  { name = "Emilie Nilsson", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11.11"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
train = "mnist_classifier.train:main"
evaluate = "mnist_classifier.evaluate:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]

[tool.coverage.run]
source=["mnist_classifier"]
omit = ["tests/*"]
